fix: 동시성 제어 및 코드 품질 개선
동시성 문제 해결:
- forceEnroll()에 비관적 락 적용 (forceOccupySeat 메서드 추가)
- InstructorAssignment에 UK 제약 추가 (중복 배정 방지)
- Course, CourseTime, Program 엔티티에 @Version 추가 (낙관적 락)

코드 품질 개선:
- CORS, H2, JWT 설정 환경변수화
- DEFAULT_TENANT_ID 하드코딩 제거 (TenantContext 사용)
- Path Traversal 보안 취약점 수정
- Process 리소스 누수 수정 (ThumbnailServiceImpl)
- NumberFormatException 예외 처리 추가 (JwtProvider)
- 민감정보 로깅 제거 (AuthServiceImpl)
- TenantFilter 기본 테넌트 ID 환경변수화

테스트 수정:
- EnrollmentServiceTest forceEnroll 테스트 Mock 업데이트